<resources>
    <string name="app_name">ABE_demo</string>
    <string name="run">Run</string>
    <string name="jump">进入演示模式</string>
    <string name="mesMing">明文信息：</string>
    <string name="mesMi">解密信息：</string>
    <string name="ct">密文信息：</string>
    <string name="QRCode">生成二维码：</string>
    <string name="arrange">部署参数</string>
    <string name="keygen">分发密钥</string>
    <string name="encrypt">加密明文</string>
    <string name="decrypt">解密密文</string>
    <string name="drawer_open">open</string>
    <string name="drawer_close">close</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="introduce_for_setup">在setup算法运行的阶段，服务器生成了运算参数（包括公钥pk，主密钥msk）</string>
    <string name="btn_run_setup">setup</string>
    <string name="pk">公钥：</string>
    <string name="msk">主密钥：</string>
    <string name="setup_need">setup算法所需要的参数</string>
    <string name="nothing">无</string>
    <string name="setup_given">setup算法生成的参数</string>
    <string name="waiting_init">（待生成）</string>
    <string name="introduce_for_keygen">为了给用户生成唯一的密钥，密钥生成算法根据服务器存有的额公共参数进行运算，并生成用户密钥。</string>
    <string name="btn_run_keygen">keygen</string>
    <string name="keygen_need">keygen算法所需要的参数</string>
    <string name="keygen_given">keygen算法生成的参数</string>
    <string name="sk">用户密钥</string>
    <string name="keygen_needed_pk">公钥 pk：</string>
    <string name="keygen_needed_msk">主密钥 msk：</string>
    <string name="introduce_for_encrypt">介绍一下encrypt算法</string>
    <string name="btn_run_encrypt">encrypt</string>
    <string name="encrypt_need">encrypt算法需要的参数</string>
    <string name="encrypt_given">encrypt算法生成的参数</string>
    <string name="encrypt_needed_pk">公钥 pk：</string>
    <string name="encrypt_needed_access_tree">访问树结构：</string>
    <string name="see_access_tree_in_bottom_right">点击右上角对应按钮跳转</string>
    <string name="introduce_for_decrypt">描述一下decrypt算法</string>
    <string name="btn_run_decrypt">decrypt</string>
    <string name="decrypt_need">decrypt算法所需的参数</string>
    <string name="decrypt_given">decrypt算法生成的参数</string>
    <string name="decrypt_needed_pk">公钥 pk：</string>
    <string name="decrypt_needed_ct">密文 ct：</string>
    <string name="decrypt_needed_sk">私钥 sk：</string>
    <string name="abe_demo">ABE_demo</string>

    <string name="title">Scan</string>
    <string name="scan_tip">Place the code within the frame</string>
    <string name="no_code_tip">No code detected.</string>
    <string name="confirm">OK</string>
    <string name="light">Touch for more light</string>
    <string name="light_off">Turn off light</string>
    <string name="default_view_decoe">Default View Mode</string>
    <string name="photo_decode">Decode Photo</string>
    <string name="customized_view_decode">Customized View Mode</string>
    <string name="bitmap_api_decode">Bitmap Mode</string>
    <string name="multiProcessor_api_syn_decode">MultiProcessor API Synchronous Mode</string>
    <string name="multiProcessor_api_asyn_decode">MultiProcessor API Asynchronous Mode</string>
    <string name="generate_QR_code">Generate QR Code</string>
    <string name="barcode_width">Barcode width:</string>
    <string name="barcode_height">Barcode height:</string>
    <string name="barcode_type">Type:</string>
    <string name="barcode_color">Color:</string>
    <string name="barcode_backgroundcolor">Background:</string>
    <string name="barcode_margin">Margin:</string>
    <string name="width_value">700</string>
    <string name="height_value">700</string>
    <string name="generate_barcode">Generate Barcode</string>
    <string name="save_barcode">Save Barcode</string>
    <string name="barcode_content">Barcode Content:</string>
    <string name="content_detail">HUAWEI Scan Kit scans and parses all major 1D and 2D barcodes, helping you quickly build barcode scanning functions into your apps.</string>
    <string name="content_detailb">MultiCodeDecoder：Decode Multi Codes</string>
    <string name="title_result">Result</string>
    <string name="code_format">Code Format</string>
    <string name="result_type">Result Type</string>
    <string name="result_content">Result</string>
    <string name="copy">Copy</string>
    <string name="add_contact">Add Contact</string>
    <string name="connect_network">Connet to network</string>
    <string name="add_calendar">Add to calendar</string>
    <string name="send_sms">Send SMS</string>
    <string name="call">Call</string>
    <string name="nivigation">Nivigation</string>
    <string name="send_email">Send Email</string>
    <string name="copy_toast">Content has been copied</string>
    <string name="open_browser">Open in browser</string>
    <string name="mwc_title">HMS Core Scan Kit Demo</string>
    <string name="mwc_subject">About Scan Kit</string>
    <string name="mwc_detail">An in-app scanner for 1D and 2D barcodes connects your app to real-world scenarios and helps you build powerful code scanning capabilities with a minimum of 5 lines of code.</string>
    <string name="scan_showresult">Scan results will show on screen</string>


    <string name="accessTree_added_level">加入权限分级后的访问树结构</string>
    <string name="accessTreePrim">原始访问树结构</string>
    <string name="AccessTreeSimplified">简化叶子节点的访问树结构</string>
    <string name="setup_introduce_title">setup算法简介</string>
    <string name="keygen_introduce_title">keygen算法简介</string>
    <string name="encrypt_introduce_title">encrypt算法简介</string>
    <string name="decrypt_introduce_title">decrypt算法简介</string>
    <string name="clearTextNeeded">需要加密的明文：</string>
    <string name="clt1">一级明文内容</string>
    <string name="clt2">二级明文内容</string>
    <string name="clt3">三级明文内容</string>
    <string name="mod">修改</string>
    <string name="show_qr_code">生成的二维码：</string>
    <string name="btn_run_setup_default">setup (default)</string>
    <string name="btn_run_keygen_default">keygen (default)</string>
    <string name="btn_run_encrypt_default">encrypt (default)</string>
    <string name="btn_run_decrypt_default">decrypt (default)</string>
    <string name="province">省份</string>
    <string name="city">市</string>
    <string name="地区">place</string>
    <string name="place">地区</string>
    <string name="detailAddress">详细地址</string>
    <string name="receiverName">收件人姓名</string>
    <string name="receiverMessage">收件人信息</string>
    <string name="save">保存</string>
    <string name="receiverAddress">收件人地址：</string>
    <string name="receiverPhone">收件人电话</string>
    <string name="receiverNameShow">收件人姓名：</string>
    <string name="senderMessage">寄件人信息</string>
    <string name="senderName">寄件人姓名</string>
    <string name="senderPhoneNumber">寄件人电话</string>
    <string name="scan_something">扫一扫</string>
    <string name="generate_something">生成二维码</string>
</resources>