<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".show_mode.fragment.EncryptActionFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <com.google.android.material.card.MaterialCardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                app:cardBackgroundColor="@color/cardview_light_background"
                app:cardCornerRadius="5dp"
                app:cardElevation="5dp"
                app:strokeWidth="0dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="15dp">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/encrypt_introduce_title"
                        android:textAppearance="@style/TextAppearance.Material3.TitleMedium" />


                    <TextView
                        android:id="@+id/tv_show1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingTop="10dp"
                        android:text="@string/introduce_for_encrypt"
                        android:textAppearance="@style/TextAppearance.Material3.BodyMedium" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:gravity="right"
                        android:orientation="horizontal"
                        tools:ignore="RtlHardcoded">

                        <Button
                            android:id="@+id/btn_run_encrypt"
                            android:layout_width="wrap_content"
                            android:layout_height="40dp"
                            android:layout_marginEnd="15dp"
                            android:gravity="center"
                            android:text="@string/btn_run_encrypt"
                            android:textSize="11sp" />

                        <Button
                            android:id="@+id/btn_run_encrypt_default"
                            android:layout_width="wrap_content"
                            android:layout_height="40dp"
                            android:gravity="center"
                            android:text="@string/btn_run_encrypt_default"
                            android:textSize="11sp" />

                    </LinearLayout>

                </LinearLayout>

            </com.google.android.material.card.MaterialCardView>

            <com.google.android.material.card.MaterialCardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                app:cardBackgroundColor="@color/cardview_light_background"
                app:cardCornerRadius="5dp"
                app:cardElevation="5dp"
                app:strokeWidth="0dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="15dp">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/encrypt_need"
                        android:textAppearance="@style/TextAppearance.Material3.TitleMedium" />


                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:paddingTop="10dp"
                            android:text="@string/clearTextNeeded"
                            android:textAppearance="@style/TextAppearance.Material3.BodyMedium" />


                        <com.google.android.material.textfield.TextInputLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_margin="10dp">

                            <com.google.android.material.textfield.TextInputEditText
                                android:id="@+id/clt1_edt"
                                style="@style/ThemeOverlay.Material3.TextInputEditText.FilledBox.Dense"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:hint="@string/clt1"
                                android:inputType="text" />

                        </com.google.android.material.textfield.TextInputLayout>

                        <com.google.android.material.textfield.TextInputLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_margin="10dp">

                            <com.google.android.material.textfield.TextInputEditText
                                android:id="@+id/clt2_edt"
                                style="@style/ThemeOverlay.Material3.TextInputEditText.FilledBox.Dense"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:hint="@string/clt2"
                                android:inputType="text" />


                        </com.google.android.material.textfield.TextInputLayout>

                        <com.google.android.material.textfield.TextInputLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_margin="10dp">

                            <com.google.android.material.textfield.TextInputEditText
                                android:id="@+id/clt3_edt"
                                style="@style/ThemeOverlay.Material3.TextInputEditText.FilledBox.Dense"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:hint="@string/clt3"
                                android:inputType="text" />


                        </com.google.android.material.textfield.TextInputLayout>

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="right"
                            android:orientation="vertical"
                            tools:ignore="RtlHardcoded">

                            <Button
                                android:id="@+id/btn_save_clear_text"
                                android:layout_width="wrap_content"
                                android:layout_height="40dp"
                                android:gravity="center"
                                android:text="@string/mod"
                                android:textSize="11sp" />

                        </LinearLayout>

                    </LinearLayout>


                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/encrypt_needed_access_tree"
                        android:textAppearance="@style/TextAppearance.Material3.BodyMedium" />

                    <TextView
                        android:id="@+id/tv_show_encrypt_needed_access_tree"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingTop="10dp"
                        android:text="@string/see_access_tree_in_bottom_right"
                        android:textAppearance="@style/TextAppearance.Material3.BodySmall" />


                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingTop="10dp"
                        android:text="@string/encrypt_needed_pk"
                        android:textAppearance="@style/TextAppearance.Material3.BodyMedium" />

                    <TextView
                        android:id="@+id/tv_show_encrypt_needed_pk"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textAppearance="@style/TextAppearance.Material3.BodySmall" />


                </LinearLayout>

            </com.google.android.material.card.MaterialCardView>

            <com.google.android.material.card.MaterialCardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                app:cardBackgroundColor="@color/cardview_light_background"
                app:cardCornerRadius="5dp"
                app:cardElevation="5dp"
                app:strokeWidth="0dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="15dp">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/encrypt_given"
                        android:textAppearance="@style/TextAppearance.Material3.TitleMedium" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingTop="10dp"
                        android:text="@string/show_qr_code"
                        android:textAppearance="@style/TextAppearance.Material3.BodyMedium" />

                    <com.google.android.material.imageview.ShapeableImageView
                        android:id="@+id/show_qr_code_img"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="10dp"
                        android:minHeight="20dp" />

                    <TextView
                        android:id="@+id/tv_show2"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingTop="10dp"
                        android:text="@string/ct"
                        android:textAppearance="@style/TextAppearance.Material3.BodyMedium" />

                    <TextView
                        android:id="@+id/tv_show_encrypt_ct"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/waiting_init"
                        android:textAppearance="@style/TextAppearance.Material3.BodySmall" />

                </LinearLayout>

            </com.google.android.material.card.MaterialCardView>


        </LinearLayout>

    </ScrollView>

</FrameLayout>