<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".show_mode.fragment.SetupActionFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <com.google.android.material.card.MaterialCardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="15dp"
                android:padding="0dp"
                app:cardUseCompatPadding="false"
                app:contentPadding="0dp"
                app:cardPreventCornerOverlap="true"
                app:cardBackgroundColor="@color/cardview_light_background"
                app:cardCornerRadius="15dp"
                app:cardElevation="18dp">


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/tv_show1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingLeft="15dp"
                        android:paddingTop="15dp"
                        android:paddingRight="15dp"
                        android:text="@string/introduce_for_setup"
                        android:textSize="15sp" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="right"
                        android:orientation="vertical"
                        tools:ignore="RtlHardcoded">

                        <Button
                            android:id="@+id/btn_run_setup"
                            android:layout_width="wrap_content"
                            android:layout_height="40dp"
                            android:layout_marginRight="20dp"
                            android:gravity="right"
                            android:text="@string/btn_run_setup"
                            android:textSize="11sp" />

                    </LinearLayout>

                </LinearLayout>


            </com.google.android.material.card.MaterialCardView>


            <TextView
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_margin="10dp"
                android:background="@color/md_theme_light_primary"
                android:padding="15dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="15dp"
                android:paddingRight="15dp"
                android:text="@string/setup_need"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/tv_show_setup_needed"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="15dp"
                android:paddingTop="15dp"
                android:paddingRight="15dp"
                android:text="@string/nothing"
                android:textSize="15sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_margin="10dp"
                android:background="@color/md_theme_light_primary"
                android:padding="15dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="15dp"
                android:paddingRight="15dp"
                android:text="@string/setup_given"
                android:textSize="15sp" />


            <TextView
                android:id="@+id/tv_show2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="15dp"
                android:paddingTop="15dp"
                android:paddingRight="15dp"
                android:text="@string/pk"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/tv_show_setup_pk"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="15dp"
                android:paddingRight="15dp"
                android:text="@string/waiting_init"
                android:textSize="15sp" />


            <TextView
                android:id="@+id/tv_show3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="15dp"
                android:paddingTop="15dp"
                android:paddingRight="15dp"
                android:text="@string/msk"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/tv_show_setup_msk"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="15dp"
                android:paddingRight="15dp"
                android:text="@string/waiting_init"
                android:textSize="15sp" />

        </LinearLayout>

    </ScrollView>


</FrameLayout>