<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".show_mode.fragment.DecryptActionFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <com.google.android.material.card.MaterialCardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                app:cardBackgroundColor="@color/cardview_light_background"
                app:cardCornerRadius="5dp"
                app:cardElevation="5dp"
                app:strokeWidth="0dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="15dp">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/decrypt_introduce_title"
                        android:textAppearance="@style/TextAppearance.Material3.TitleMedium" />


                    <TextView
                        android:id="@+id/tv_show1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingTop="10dp"
                        android:text="@string/introduce_for_decrypt"
                        android:textAppearance="@style/TextAppearance.Material3.BodyMedium" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:gravity="right"
                        android:orientation="horizontal"
                        tools:ignore="RtlHardcoded">

                        <Button
                            android:id="@+id/btn_run_decrypt"
                            android:layout_width="wrap_content"
                            android:layout_height="40dp"
                            android:layout_marginEnd="15dp"
                            android:gravity="center"
                            android:text="@string/btn_run_decrypt"
                            android:textSize="11sp" />

                        <Button
                            android:id="@+id/btn_run_decrypt_default"
                            android:layout_width="wrap_content"
                            android:layout_height="40dp"
                            android:gravity="center"
                            android:text="@string/btn_run_decrypt_default"
                            android:textSize="11sp" />

                    </LinearLayout>

                </LinearLayout>

            </com.google.android.material.card.MaterialCardView>

            <com.google.android.material.card.MaterialCardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                app:cardBackgroundColor="@color/cardview_light_background"
                app:cardCornerRadius="5dp"
                app:cardElevation="5dp"
                app:strokeWidth="0dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="15dp">


                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/decrypt_need"
                        android:textAppearance="@style/TextAppearance.Material3.TitleMedium" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingTop="10dp"
                        android:text="@string/decrypt_needed_sk"
                        android:textAppearance="@style/TextAppearance.Material3.BodyMedium" />

                    <TextView
                        android:id="@+id/tv_show_decrypt_needed_sk"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textAppearance="@style/TextAppearance.Material3.BodySmall" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingTop="10dp"
                        android:text="@string/decrypt_needed_ct"
                        android:textAppearance="@style/TextAppearance.Material3.BodyMedium" />

                    <TextView
                        android:id="@+id/tv_show_decrypt_needed_ct"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingTop="10dp"
                        android:textAppearance="@style/TextAppearance.Material3.BodySmall" />

                </LinearLayout>

            </com.google.android.material.card.MaterialCardView>

            <com.google.android.material.card.MaterialCardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                app:cardBackgroundColor="@color/cardview_light_background"
                app:cardCornerRadius="5dp"
                app:cardElevation="5dp"
                app:strokeWidth="0dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="15dp">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/decrypt_given"
                        android:textAppearance="@style/TextAppearance.Material3.TitleMedium" />


                    <TextView
                        android:id="@+id/tv_show2"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingTop="10dp"
                        android:text="@string/mesMing"
                        android:textAppearance="@style/TextAppearance.Material3.BodyMedium" />

                    <TextView
                        android:id="@+id/tv_show_decrypt_ming"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/waiting_init"
                        android:textAppearance="@style/TextAppearance.Material3.BodySmall" />

                </LinearLayout>

            </com.google.android.material.card.MaterialCardView>


        </LinearLayout>

    </ScrollView>

</FrameLayout>